Add alert if there are errors

--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,10 @@
         <title>markdownConvertor</title>
     </head>
     <body>
+        <div class="hide" id="alert">
+            <span class="icon-alert"></span>
+            <span id="alert-content"></span>
+        </div>
         <div id="content">
             <h1>markdownConvertor</h1>
 
