--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="http://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic,700italic|Source+Code+Pro" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/highlight/github.css">
         <title>markdownConvertor</title>
     </head>
     <body>
@@ -17,7 +18,7 @@
 
             <div id="source">
                 <h2>Source</h2>
-                <textarea></textarea>
+                <textarea autofocus="autofocus"></textarea>
             </div>
             <div id="markdown">
                 <h2>Result</h2>
@@ -26,6 +27,7 @@
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="js/highlight.pack.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
