Add license and readme

--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,12 @@
         <title>markdownConvertor</title>
     </head>
     <body>
+        <!--
+        Copyright © 2014 Simon Leblanc <contact@leblanc-simon.eu>
+        This work is free. You can redistribute it and/or modify it under the
+        terms of the Do What The Fuck You Want To Public License, Version 2,
+        as published by Sam Hocevar. See http://www.wtfpl.net/ for more details.
+        -->
         <div class="hide" id="alert">
             <span class="icon-alert"></span>
             <span id="alert-content"></span>
