don't use scheme when call google font api

--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link href="http://fonts.googleapis.com/css?family=Ubuntu:400,700,400italic,700italic|Source+Code+Pro" rel="stylesheet" type="text/css">
+        <link href="//fonts.googleapis.com/css?family=Ubuntu:400,700,400italic,700italic|Source+Code+Pro" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/highlight/github.css">
         <title>markdownConvertor</title>
